changed colors on smallTitle and navbar+dropdown, changed pos & size of text on navbar, fixed responsiveness of navbar

--- a/kontakt.css
+++ b/kontakt.css
@@ -1,5 +1,7 @@
 body {
   background-color: rgb(29, 2, 19);
+  margin-top: 20vh;
+  padding: 0;
 }
 
 h1 {
