--- a/style_ver2.css
+++ b/style_ver2.css
@@ -27,15 +27,11 @@ header {
   margin-top: -1vh;
 }
 
-.footer {
-  background-color: #c28b4d;
-  color: #f3f3f3;
-}
 .parallax {
   background-image: url("rootbeerBackground.jpg");
 
   height: 100%;
-
+  margin-top: -vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -55,33 +51,21 @@ header {
   margin-bottom: -0vh;
 }
 
-.smallTitle {
-  text-align: center;
-  font-family: Stencil Std, fantasy;
-  font-size: 3.5vw;
-  position: static;
-  color: rgb(255, 255, 255);
-  background-color: rgb(43, 19, 12);
-  text-shadow: rgba(66, 21, 4, 0.945)2px 4px 3px 0px;
-  letter-spacing: 4px;
-  box-shadow: 5px 1000px 4px 1000px rgba(85, 51, 23, 0.541);
-}
 
 h1 {
-  margin-top: 0.5vh;
-  margin-left: 0.5vh;
+  margin-left: 2vw;
   font-style: oblique;
   font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
   font-variant: small-caps;
-  color: #ffffff;
-  font-size: 15px;
+  color: #351e0f;
+  font-size: 25px;
+  text-decoration: underline;
 }
 
 nav {
   width: 100%;
-  height: 12vh;
-  margin-top: -3.1vh;
-  background-color: rgb(29, 2, 19);
+  height: 81px;
+  background-color: rgba(255, 242, 226);
 }
 
 nav p {
@@ -94,13 +78,13 @@ nav p {
   line-height: 55px;
   float: left;
   padding: 0px 20px;
-  margin-right: -4vw;
+  
 }
 
 nav ul {
   float: right;
-  background-color: rgb(29, 2, 19);
   margin-top: -2.5vh;
+  margin-right: 1vw;
 }
 
 nav ul li {
@@ -112,17 +96,19 @@ nav ul li {
 nav ul li a {
   margin-top: 2vh;
   font-family: Noto Sans, sans-serif;
-  color: #ffffff;
+  color: rgb(46, 34, 22);
   font-size: 15px;
-  padding: 25px 14px;
+  padding: 10px 14px;
   display: block;
   text-decoration: none;
+  font-weight: bold;
+
 }
 
 nav ul li ul {
   display: none;
   position: absolute;
-  background-color: rgb(29, 2, 19);
+  background-color: rgba(255, 242, 226);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -138,18 +124,19 @@ nav ul li ul li a {
   padding: 20px 14px;
 }
 nav ul li ul li a:hover {
-  background-color: rgba(94, 58, 38, 0.616);
+  background-color: rgba(0,0,0,0.1);
 }
 
-.iframe {
-  width: 70vw;
-  height: 50vh;
-  margin-top: 4vh;
-  margin-left: 15vw;
-  margin-bottom: 10vh;
-  display: flex;
-  justify-content: space-evenly;
-  box-shadow: 0px 0px 60px 6px rgba(0, 0, 0, 0.78);
+.smallTitle {
+  text-align: center;
+  font-family: Stencil Std, fantasy;
+  font-size: 35px;
+  position: static;
+  color: rgba(88, 52, 4, 0.582);
+  background-color: rgb(212, 203, 191);
+  text-shadow: rgba(66, 21, 4, 0.945)2px 4px 3px 0px;
+  letter-spacing: 4px;
+  box-shadow: 5px 1000px 4px 1000px rgba(85, 51, 23, 0.541);
 }
 
 #recensionContainer {
@@ -192,6 +179,23 @@ nav ul li ul li a:hover {
   text-align: center;
   width: 50vw;
   text-shadow: 2px 2px rgba(75, 59, 59, 0.795);
+}
+
+.iframe {
+  width: 70vw;
+  height: 50vh;
+  margin-top: 4vh;
+  margin-left: 15vw;
+  margin-bottom: 10vh;
+  display: flex;
+  justify-content: space-evenly;
+  box-shadow: 0px 0px 60px 6px rgba(0, 0, 0, 0.78);
+}
+
+
+.footer {
+  background-color: #161515;
+  color: #f3f3f3;
 }
 
 
